change to new template

--- a/html/bar.html
+++ b/html/bar.html
@@ -33,8 +33,8 @@
             Maps
           </button>
           <div class="dropdown-content" id="section3">
-            <a href="#page6">Part one</a>
-            <a href="#page7">Part two</a>
+            <a href="../html/map.html">Choropleth map (1)</a>
+            <a href="../html/choropleth2.html">Choropleth map (2)</a>
           </div>
         </div>
       </div>
