--- a/html/snakey.html
+++ b/html/snakey.html
@@ -26,6 +26,32 @@
     </style>
 </head>
 <body>
+    <div class="sidebar" id="sidebar">
+        <!-- <button class="close-btn" onclick="toggleSidebar()">&#9776;</button> -->
+        <div class="sidebar-header">
+            <h2>Menu</h2>
+        </div>
+        <div class="sidebar-content">
+            <div class="accordion">
+                <a href="../index.html" class="accordion-btn" id="homelink">Home</a>
+
+                <button class="accordion-btn" onclick="toggleDropdown('section2')">Comparing Categories</button>
+                <div class="dropdown-content" id="section2">
+                    <a href="../html/bar.html">Bar charts</a>
+                    <a href="../html/stacked.html">Stacked charts</a>
+                    <a href="../html/heatmap.html">Heatmap</a>
+                </div>
+                <a href="../html/snakey.html" class="accordion-btn" id="snakey">Alluvial</a>
+
+                <button class="accordion-btn" onclick="toggleDropdown('section3')">Maps</button>
+                <div class="dropdown-content" id="section3">
+                    <a href="../html/map.html">Choropleth map (1)</a>
+                    <a href="../html/choropleth2.html">Choropleth map (2)</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="content">
     <div id="chart"></div>
     <script>
         // Set the dimensions of the chart
@@ -168,5 +194,7 @@ ${d.value}`);
                 .call(yAxis);
         });
     </script>
+    </div>
+    <script src="../js/base.js"></script>
 </body>
 </html>
