--- a/html/stacked.html
+++ b/html/stacked.html
@@ -9,6 +9,32 @@
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body ng-app="myApp" style="background-color: var(--white);">
+    <div class="sidebar" id="sidebar">
+      <!-- <button class="close-btn" onclick="toggleSidebar()">&#9776;</button> -->
+      <div class="sidebar-header">
+          <h2>Menu</h2>
+      </div>
+      <div class="sidebar-content">
+          <div class="accordion">
+              <a href="../index.html" class="accordion-btn" id="homelink">Home</a>
+
+              <button class="accordion-btn" onclick="toggleDropdown('section2')">Comparing Categories</button>
+              <div class="dropdown-content" id="section2">
+                  <a href="../html/bar.html">Bar charts</a>
+                  <a href="../html/stacked.html">Stacked charts</a>
+                  <a href="../html/heatmap.html">Heatmap</a>
+              </div>
+              <a href="../html/snakey.html" class="accordion-btn" id="snakey">Alluvial</a>
+
+              <button class="accordion-btn" onclick="toggleDropdown('section3')">Maps</button>
+              <div class="dropdown-content" id="section3">
+                  <a href="../html/map.html">Choropleth map (1)</a>
+                  <a href="../html/choropleth2.html">Choropleth map (2)</a>
+              </div>
+          </div>
+      </div>
+  </div>
+  <div class="content">
     <div ng-controller="saba">
             <div id="chart-stacked"></div>
             <div id="chart-container" style="display: flex; gap: 30px"></div>
@@ -16,5 +42,7 @@
     
       <script src="../js/master.js"></script>
     </div>
+    <script src="../js/base.js"></script>
+</div>
   </body>
 </html>
