--- a/html/heatmap.html
+++ b/html/heatmap.html
@@ -6,6 +6,8 @@
   <title>Heatmap</title>
   <meta content="HeatMap Chart" name="keywords">
   <meta content="AnyChart - JavaScript Charts designed to be embedded and integrated" name="description">
+  <link rel="stylesheet" href="../css/styles.css" />
+
   <!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -20,9 +22,37 @@ body,
 }</style>
  </head>
  <body >
+  <div class="sidebar" id="sidebar">
+    <!-- <button class="close-btn" onclick="toggleSidebar()">&#9776;</button> -->
+    <div class="sidebar-header">
+        <h2>Menu</h2>
+    </div>
+    <div class="sidebar-content">
+        <div class="accordion">
+            <a href="../index.html" class="accordion-btn" id="homelink">Home</a>
+
+            <button class="accordion-btn" onclick="toggleDropdown('section2')">Comparing Categories</button>
+            <div class="dropdown-content" id="section2">
+                <a href="../html/bar.html">Bar charts</a>
+                <a href="../html/stacked.html">Stacked charts</a>
+                <a href="../html/heatmap.html">Heatmap</a>
+            </div>
+            <a href="../html/snakey.html" class="accordion-btn" id="snakey">Alluvial</a>
+
+            <button class="accordion-btn" onclick="toggleDropdown('section3')">Maps</button>
+            <div class="dropdown-content" id="section3">
+                <a href="../html/map.html">Choropleth map (1)</a>
+                <a href="../html/choropleth2.html">Choropleth map (2)</a>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="content">
   <div id="container"></div>
   <script src="https://cdn.anychart.com/releases/8.11.1/js/anychart-core.min.js"></script>
   <script src="https://cdn.anychart.com/releases/8.11.1/js/anychart-heatmap.min.js"></script>
   <script src="../js/heatmap.js"></script>
+</div>
+<script src="../js/base.js"></script>
  </body>
 </html>
