--- a/html/map.html
+++ b/html/map.html
@@ -1,10 +1,12 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Expandable Sidebar Navigation</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <link rel="stylesheet" href="../css/styles.css" />
 </head>
 <body>
     <div class="sidebar" id="sidebar">
@@ -33,7 +35,9 @@
         </div>
     </div>
     <div class="content">
-        <p></p>
+      <div id="total-emissions" style=""></div>  
+      <div id="switch-button"></div>
+      <script src="../js/map.js"></script>
     </div>
     <script src="../js/base.js"></script>
 </body>
