fix the adressing

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Main Content Section -->
       <section class="info-section">
         <div class="circle-container">
-          <a href="html/section_one.html">
+          <a href="html/bar.html">
             <div class="circle-image">
               <img src="img/bar_icon.gif" alt="section-one" />
             </div>
