adjust axis of bar charts

--- a/html/bar.html
+++ b/html/bar.html
@@ -10,7 +10,6 @@
   </head>
   <body ng-app="myApp">
     <div class="sidebar" id="sidebar">
-      <!-- <button class="close-btn" onclick="toggleSidebar()">&#9776;</button> -->
       <div class="sidebar-header">
         <h2>Menu</h2>
       </div>
@@ -74,7 +73,7 @@
         </div>
       </div>
     </div>
-    <script src="../js/master.js"></script>
+    <script src="../js/bar.js"></script>
     <script src="../js/base.js"></script>
   </body>
 </html>
