fixing UI errors

--- a/html/bar.html
+++ b/html/bar.html
@@ -39,6 +39,7 @@
       </div>
     </div>
     <div class="content">
+      <h2>Annual CO2 Emmisions(per capita) of the year 1996</h2>
       <div ng-controller="saba">
         <div class="inline-container">
           <div id="chart-one-year"></div>
