--- a/html/map.html
+++ b/html/map.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -10,7 +8,6 @@
 </head>
 <body>
     <div class="sidebar" id="sidebar">
-        <!-- <button class="close-btn" onclick="toggleSidebar()">&#9776;</button> -->
         <div class="sidebar-header">
             <h2>Menu</h2>
         </div>
@@ -35,7 +32,8 @@
         </div>
     </div>
     <div class="content">
-      <div id="total-emissions" style=""></div>  
+    <h2>Annual CO2 Emmisions(per capita) of the year 1996</h2>
+      <div id="total-emissions"></div>  
       <div id="switch-button"></div>
       <script src="../js/map.js"></script>
     </div>
