--- a/html/stacked.html
+++ b/html/stacked.html
@@ -5,44 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>D3 Bar Chart</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
-  <body ng-app="myApp" style="background-color: var(--white);">
+  <body style="background-color: var(--white)">
     <div class="sidebar" id="sidebar">
-      <!-- <button class="close-btn" onclick="toggleSidebar()">&#9776;</button> -->
       <div class="sidebar-header">
-          <h2>Menu</h2>
+        <h2>Menu</h2>
       </div>
       <div class="sidebar-content">
-          <div class="accordion">
-              <a href="../index.html" class="accordion-btn" id="homelink">Home</a>
+        <div class="accordion">
+          <a href="../index.html" class="accordion-btn" id="homelink">Home</a>
 
-              <button class="accordion-btn" onclick="toggleDropdown('section2')">Comparing Categories</button>
-              <div class="dropdown-content" id="section2">
-                  <a href="../html/bar.html">Bar charts</a>
-                  <a href="../html/stacked.html">Stacked charts</a>
-                  <a href="../html/heatmap.html">Heatmap</a>
-              </div>
-              <a href="../html/snakey.html" class="accordion-btn" id="snakey">Alluvial</a>
-
-              <button class="accordion-btn" onclick="toggleDropdown('section3')">Maps</button>
-              <div class="dropdown-content" id="section3">
-                  <a href="../html/map.html">Choropleth map (1)</a>
-                  <a href="../html/choropleth2.html">Choropleth map (2)</a>
-              </div>
+          <button class="accordion-btn" onclick="toggleDropdown('section2')">
+            Comparing Categories
+          </button>
+          <div class="dropdown-content" id="section2">
+            <a href="../html/bar.html">Bar charts</a>
+            <a href="../html/stacked.html">Stacked charts</a>
+            <a href="../html/heatmap.html">Heatmap</a>
           </div>
+          <a href="../html/snakey.html" class="accordion-btn" id="snakey"
+            >Alluvial</a
+          >
+
+          <button class="accordion-btn" onclick="toggleDropdown('section3')">
+            Maps
+          </button>
+          <div class="dropdown-content" id="section3">
+            <a href="../html/map.html">Choropleth map (1)</a>
+            <a href="../html/choropleth2.html">Choropleth map (2)</a>
+          </div>
+        </div>
       </div>
-  </div>
-  <div class="content">
-    <div ng-controller="saba">
-            <div id="chart-stacked"></div>
-            <div id="chart-container" style="display: flex; gap: 30px"></div>
-            <div id="stacked-chart"></div>
-    
-      <script src="../js/master.js"></script>
     </div>
-    <script src="../js/base.js"></script>
-</div>
+    <div class="content">
+      <h2>Annual CO2 Emmisions(per capita) of the year 1996</h2>
+      <div id="chart-stacked"></div>
+      <div id="chart-container" style="display: flex; gap: 30px"></div>
+      <div id="stacked-chart"></div>
+
+      <script src="../js/stacked.js"></script>
+      <script src="../js/base.js"></script>
+    </div>
   </body>
 </html>
